Dark Mode: Fix QR display (#14312)

--- a/ui/css/utilities/colors.scss
+++ b/ui/css/utilities/colors.scss
@@ -8,4 +8,8 @@
   --goerli: #3099f2;
   --localhost: #29b6af;
   --flask-purple: #8b45b6;
+
+  // DO NOT CHANGE
+  // Required for the QR reader to work properly
+  --qr-code-white-background: '#fff';
 }
